Megamenu: Fix megamenu alignment conflict with animation
Fix https://github.com/t3framework/t3/issues/163

--- a/source/plg_system_t3/base-bs3/less/megamenu.less
+++ b/source/plg_system_t3/base-bs3/less/megamenu.less
@@ -341,49 +341,67 @@
     }
 
     &.zoom {
+      
       .mega {
         & > .mega-dropdown-menu {
-          transform: scale(0,0);
-          transform-origin:20% 20%;
-          -webkit-transform: scale(0,0);
-          -webkit-transform-origin:20% 20%;
-          -ms-transform: scale(0,0);
-          -ms-transform-origin:20% 20%;
-          -o-transform: scale(0,0);
-          -o-transform-origin:20% 20%;
+          .scale(~"0, 0");
+          .transform-origin(20% 20%);
         }
         &.open > .mega-dropdown-menu {
-          transform: scale(1,1);
-          -webkit-transform: scale(1,1);
-          -ms-transform: scale(1,1);
-          -o-transform: scale(1,1);
+          .scale(~"1, 1");
+        }
+      }
+
+      //special case for level 0
+      .level0 > .mega-align-center {
+        &> .mega-dropdown-menu {
+          -webkit-transform: scale(0, 0) translate(-50%, 0);
+              -ms-transform: scale(0, 0) translate(-50%, 0);
+                  transform: scale(0, 0) translate(-50%, 0);
+
+          .transform-origin(0% 20%);
+        }
+
+        &.open > .mega-dropdown-menu {
+          -webkit-transform: scale(1, 1) translate(-50%, 0);
+              -ms-transform: scale(1, 1) translate(-50%, 0);
+                  transform: scale(1, 1) translate(-50%, 0);
         }
       }
     }
 
     &.elastic {
-      .level0 > .mega > .mega-dropdown-menu {
-        transform: scale(1,0);
-        -webkit-transform: scale(1,0);
-        -ms-transform: scale(1,0);
-        -o-transform: scale(1,0);
-      }
+      
       .mega {
         & > .mega-dropdown-menu {
-          transform: scale(0,1);
-          transform-origin:10% 0;
-          -webkit-transform: scale(0,1);
-          -webkit-transform-origin:10% 0;
-          -ms-transform: scale(0,1);
-          -ms-transform-origin:10% 0;
-          -o-transform: scale(0,1);
-          -o-transform-origin:10% 0;
+          .scale(~"0, 1");
+          .transform-origin(10% 0);
         }      
         &.open > .mega-dropdown-menu {
-          transform: scale(1,1);
-          -webkit-transform: scale(1,1);
-          -ms-transform: scale(1,1);
-          -o-transform: scale(1,1);
+          .scale(~"1, 1");
+        }
+      }
+
+      .level0 {
+
+        & > .mega > .mega-dropdown-menu {
+          .scale(~"1, 0");
+        }
+
+        & > .mega-align-center {
+          & > .mega-dropdown-menu {
+            transform: scale(1,0) translate(-50%, 0);
+            -webkit-transform: scale(1,0) translate(-50%, 0);
+            -ms-transform: scale(1,0) translate(-50%, 0);
+            -o-transform: scale(1,0) translate(-50%, 0);
+
+            &.open > .mega-dropdown-menu {
+              transform: scale(1,1) translate(-50%, 0);
+              -webkit-transform: scale(1,1) translate(-50%, 0);
+              -ms-transform: scale(1,1) translate(-50%, 0);
+              -o-transform: scale(1,1) translate(-50%, 0);
+            }
+          }
         }
       }
     }
@@ -396,14 +414,8 @@
         }
         & > .mega-dropdown-menu {
           & > div {
-            transition: all 400ms;
-            -webkit-transition: all 400ms;
-            -ms-transition: all 400ms;
-            -o-transition: all 400ms;
-            -webkit-backface-visibility: hidden;
-            -moz-backface-visibility: hidden;
-            -o-backface-visibility: hidden;
-            backface-visibility: hidden;            
+            .transition(all 400ms);
+            .backface-visibility(hidden);            
             margin-top: -100%;
           }
         }
@@ -466,11 +478,10 @@
       min-width: 100% !important;
       left: 0 !important;
       margin-left: 0 !important;
-      transform: none !important;
+      
       -webkit-transform: none !important;
-      -moz-transform: none !important;
-      -ms-transform: none !important;
-      -o-transform: none !important;
+          -ms-transform: none !important;
+              transform: none !important;
     }
 
     // Hidden when collapse
