--- a/source/plg_system_t3/base/less/megamenu.less
+++ b/source/plg_system_t3/base/less/megamenu.less
@@ -293,15 +293,28 @@
     }
 
     &.zoom {
+      .level0 > .mega-align-center > .mega-dropdown-menu {
+        transform: scale(0,0) translate(-50%, 0%);
+        -webkit-transform: scale(0,0) translate(-50%, 0);
+        -ms-transform: scale(0,0) translate(-50%, 0);
+        -o-transform: scale(0,0) translate(-50%, 0);
+
+        transform-origin:0% 20%;
+        -webkit-transform-origin:0% 20%;
+        -ms-transform-origin:0% 20%;
+        -o-transform-origin:0% 20%;
+      }
+
       .mega {
         & > .mega-dropdown-menu {
           transform: scale(0,0);
-          transform-origin:20% 20%;
           -webkit-transform: scale(0,0);
-          -webkit-transform-origin:20% 20%;
           -ms-transform: scale(0,0);
-          -ms-transform-origin:20% 20%;
           -o-transform: scale(0,0);
+
+          transform-origin:20% 20%;
+          -webkit-transform-origin:20% 20%;
+          -ms-transform-origin:20% 20%;
           -o-transform-origin:20% 20%;
         }
         &.open > .mega-dropdown-menu {
@@ -310,6 +323,13 @@
           -ms-transform: scale(1,1);
           -o-transform: scale(1,1);
         }
+      }
+
+      .level0 > .mega-align-center.open > .mega-dropdown-menu {
+        transform: scale(1,1) translate(-50%, 0);
+        -webkit-transform: scale(1,1) translate(-50%, 0);
+        -ms-transform: scale(1,1) translate(-50%, 0);
+        -o-transform: scale(1,1) translate(-50%, 0);
       }
     }
 
@@ -320,6 +340,14 @@
         -ms-transform: scale(1,0);
         -o-transform: scale(1,0);
       }
+
+      .level0 > .mega-align-center > .mega-dropdown-menu {
+        transform: scale(1,0) translate(-50%, 0);
+        -webkit-transform: scale(1,0) translate(-50%, 0);
+        -ms-transform: scale(1,0) translate(-50%, 0);
+        -o-transform: scale(1,0) translate(-50%, 0);
+      }
+
       .mega {
         & > .mega-dropdown-menu {
           transform: scale(0,1);
@@ -337,6 +365,13 @@
           -ms-transform: scale(1,1);
           -o-transform: scale(1,1);
         }
+      }
+
+      .level0 > .mega-align-center.open > .mega-dropdown-menu {
+        transform: scale(1,1) translate(-50%, 0);
+        -webkit-transform: scale(1,1) translate(-50%, 0);
+        -ms-transform: scale(1,1) translate(-50%, 0);
+        -o-transform: scale(1,1) translate(-50%, 0);
       }
     }
 
